[package]
name = "db_maintenancer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
config = "0.13.3"
serde = "1.0.152"
simple-logging = "2.0.2"
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "postgres", "uuid"] }
tokio = { version = "1.25.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["fmt", "time"] }
